--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "format": "biome format",
     "lint": "biome lint",
     "test": "bun test",
-    "release": "release-it"
+    "release": "git commit -am 'release' && git push origin main && release-it"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
