--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-      - name: Initialize the NPM
-        run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
+      - name: Initialize the NPM Token
+        run: bun config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
       - run: bun install
       - run: bun run release --ci
         env:
