--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,13 @@ jobs:
         with:
           fetch-depth: 0
       - uses: oven-sh/setup-bun@v2
+      - run: bun install
       - name: git config
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - name: Initialize the NPM Token
-        run: bun config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
-      - run: bun install
+        run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
       - run: bun run release --ci
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
