--- a/package.json
+++ b/package.json
@@ -28,20 +28,18 @@
     "dev": "tsup --watch",
     "format": "biome format",
     "lint": "biome lint",
-    "test": "bun test",
+    "test": "npm test",
     "release": "release-it"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@release-it/conventional-changelog": "9.0.4",
-    "@types/bun": "latest",
     "release-it": "17.11.0",
-    "tsup": "8.3.5"
+    "tsup": "8.3.5",
+    "typescript": "5.7.2"
   },
   "peerDependencies": {
-    "@types/bun": "latest",
-    "release-it": "17.10.0",
-    "typescript": "5.7.2"
+    "typescript": ">=5.7.2"
   },
   "version": "0.1.0"
 }
