fix: try bun config

--- a/.release-it.json
+++ b/.release-it.json
@@ -3,6 +3,9 @@
   "github": {
     "release": true
   },
+  "npm": {
+    "publish": true
+  },
   "hooks": {
     "after:bump": "npm run build",
     "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
