--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "dev": "tsup --watch",
     "format": "biome format",
     "lint": "biome lint",
-    "test": "npm test",
+    "test": "bun --watch test --coverage",
     "release": "release-it"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@release-it/conventional-changelog": "9.0.4",
+    "@types/bun": "1.1.14",
     "release-it": "17.11.0",
     "tsup": "8.3.5",
+    "type-fest": "4.31.0",
     "typescript": "5.7.2"
   },
   "peerDependencies": {
