--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,14 @@ jobs:
         uses: oven-sh/setup-bun@v2
         with:
           bun-version-file: ".bun-version"
+      - name: Setup Biome
+        uses: biomejs/setup-biome@v2
+        with:
+          version: latest          
       - name: Install dependencies
         run: bun install --frozen-lockfile
+      - name: Run Biome
+        run: biome ci .        
       - name: git config
         run: |
           git config user.name "${GITHUB_ACTOR}"
