--- a/biome.json
+++ b/biome.json
@@ -7,9 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": [
-			"dist/**"
-		]
+		"ignore": ["dist/**"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -26,8 +24,7 @@
 	},
 	"javascript": {
 		"formatter": {
-			"quoteStyle": "double",
-			"lineWidth": 10000
+			"quoteStyle": "double"
 		}
 	}
 }
