--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "async-toolbelt",
-	"version": "0.1.6",
+	"version": "0.1.7",
 	"license": "MIT",
 	"author": "Dan Kreiger <dankreiger@gmail.com>",
 	"sideEffects": false,
@@ -22,7 +22,9 @@
 	"main": "dist/index.cjs",
 	"module": "dist/index.js",
 	"types": "./dist/index.d.ts",
-	"files": ["dist/**"],
+	"files": [
+		"dist/**"
+	],
 	"scripts": {
 		"build": "tsup",
 		"check": "biome check",
