--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      
+
 permissions:
   contents: write
   packages: write
@@ -24,15 +24,17 @@ jobs:
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
         with:
-          version: latest          
+          version: latest
       - name: Install dependencies
         run: bun install --frozen-lockfile
       - name: Run Biome
-        run: biome ci .        
+        run: biome ci .
+      - name: Run tests
+        run: bun run test:ci
       - name: git config
         run: |
           git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"          
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - name: Initialize the NPM Token
         run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
       - run: bun install
