--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["dist/**"]
+		"ignore": ["dist/*.js", "dist/*.cjs", "dist/*.js.map", "dist/*.cjs.map"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -19,7 +19,10 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"nursery": {
+				"useImportRestrictions": "error"
+			}
 		}
 	},
 	"javascript": {
